--- a/Web-Visualization-Dashboard/style.css
+++ b/Web-Visualization-Dashboard/style.css
@@ -11,7 +11,7 @@ body{
     margin-left: 30px; 
     padding: inherit; 
     font-weight: bold; 
-    background-color: #0BADA6;
+    background-color: #ada60b;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .navbar{
