--- a/Web-Visualization-Dashboard/style.css
+++ b/Web-Visualization-Dashboard/style.css
@@ -44,7 +44,7 @@ img{
     height:100% !important;
 }
 .active, .panel:hover{
-    border-color:#0BADA6;
+    border-color:#ada60b;
     border-style: solid; 
     
 }
@@ -55,7 +55,7 @@ img{
 
 /* Title Class  */
 .title{
-    color: #0BADA6;  
+    color: #ada60b;  
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder; 
     padding-top: 25px; 
@@ -85,7 +85,7 @@ footer{
 background-color: #666666; 
 border-top-style: solid; 
 border-top-width: 5px; 
-border-top-color: #0BADA6;
+border-top-color: #ada60b;
 color: white; 
 min-height: 55px; 
 font-family: Arial, Helvetica, sans-serif;
@@ -100,7 +100,7 @@ padding-top: 15px;
 /* Media Queries */
 @media(max-width: 992px){
 .navbar-expand-lg{
-background-color: #0BADA6 !important;
+background-color: #ada60b !important;
 }
 .navbar{
     max-height: none; 
